# Embedded-Linux

./: .gitignore  .gitmodules
AdminLinux/AdminLinux_Task1/: Task1.md
AdminLinux/AdminLinux_Task2/: task2.md
AdminLinux/AdminLinux_Task4_CapsLock/: capslockControl.c  capslockControl.out  task4.md
AdminLinux/AdminLinux_Task5_sharedMemory/: sharedMemory_second.c
AdminLinux/AdminLinux_Task6_printf/: my_print.c  task6.md
AdminLinux/AdminLinux_Task7_RPC/: readme.md
AdminLinux_Task1/: firstBachScript.sh
AdminLinux_Task2/: main.c  task2.md
AdminLinux_Task3/: bashscript2.sh  task3.md
AdminLinux_Task5_sharedMemory/: sharedMemory.c  sharedMemory_first.out  sharedMemory_second.out
AdminLinux_Task6_printf/: my_print.c  myprint  task6.md
AdminLinux_Task7_RPC/: client  client.c  server  server.c
Cpp/cppTask5/: a.out  completeFileWithNoInclude.cpp  example.cpp  main.cpp  main.out
Cpp/cppTask5/sevenSegmentProject/app/: main.cpp
Cpp/cppTask5/sevenSegmentProject/include/: IStream.hpp  Stream.hpp
Cpp/cppTask5/sevenSegmentProject/src/: IStream.cpp  Stream.cpp
EmbeddedLinux/2_Virtual_SDcard/: README.md  activateVirtualSdCard.sh  sdVirtualScript.sh
EmbeddedLinux/3_U-boot/: README.md  Untitled 1.odg  bootingSequence_RPI_PC.md
EmbeddedLinux/4_U-boot_BareMetal/: CMakeLists.txt  README.md  boot.S  gpio.c  gpio.h  linker.ld  main.c  timer.c  timer.h  u-boot.md
EmbeddedLinux/4_U-boot_BareMetal/Minimal_bootfs_forRPI3bplus_FATp1_bareMetalApp/: config.txt
EmbeddedLinux/4_U-boot_BareMetal/RaspbianOS_bootfs_forExample/: issue.txt
EmbeddedLinux/5_Kernel_with_U-boot/: README.md
EmbeddedLinux/6_MicroShell_As_InitProgram/: README.md
EmbeddedLinux/6_initProgram_bootargs/: README.md
EmbeddedLinux/7_busybox_initProgram/: README.md  README2.md  busybox_repo_Slink  microShell_repo_Slink  minBootfs_folder_Slink  nfs_folder_Slink  rootfs_initramfs_Slink  rpiLinux_repo_Slink  tftp_folder_Slink  u-boot_repo_Slink
EmbeddedLinux/Minimal_bootfs_forRPI3bplus_FATp1/: config.txt
EmbeddedLinux/RaspbianOS_bootfs_forExample/: cmdline.txt
EmbeddedLinux_tasks/2_Virtual_SDcard/: README.md
Raspberry_Pi/: gpio  gpio.out  gpioPrintingTestCompilation.out
Raspberry_Pi/pi_task1/: gpio.cpp  gpio.hpp  gpioPrintingTestCompilation.cpp  main.cpp
Raspberry_Pi/pi_task2/: mainProgram.cpp  mainProgram.out  process2_sensor  process2_sensor.cpp
Raspberry_Pi/toRaspberryPi/: gpioPrintingTestCompilation_Pi.out  gpio_Pi.out
cmake/: CMakeLists.txt
cmake/src/: main.c
cppProject/Data_Logging&Telemetry/: .gitignore  CMakeLists.txt  logfile.txt
cppProject/Data_Logging&Telemetry/include/Logging&Telemetry/: ConsoleSinkImpl.hpp  FileSinkImpl.hpp  FileTelemetrySourceImpl.hpp  ILogSink.hpp  ITelemetrySource.hpp  LogManager.hpp  LogMessage.hpp  SafeFile.hpp  SafeSocket.hpp  SocketTelemetrySourceImpl.hpp
cppProject/Data_Logging&Telemetry/src/: main.cpp
cppProject/Data_Logging&Telemetry/src/Logging&Telemetry/: ConsoleSinkImpl.cpp  FileSinkImpl.cpp  FileTelemetrySourceImpl.cpp  ILogSink.cpp  LogManager.cpp  LogMessage.cpp  SafeFile.cpp  SafeSocket.cpp  SocketTelemetrySourceImpl.cpp
cppProject/Data_Logging&Telemetry/test/: CMakeLists.txt  test_LogManager.cpp
cppProject/ota_update/: CMakeLists.txt  readme.md
cppProject/ota_update/fidl/: OtaUpdate.fdepl  OtaUpdate.fidl
cppProject/ota_update/laptop/: CMakeLists.txt  main_laptop.cpp  vsomeip-ota-laptop.json
cppProject/ota_update/laptop-app/: readme.md
cppProject/ota_update/laptop-app/python/: send_update.py
cppProject/ota_update/rpi/: CMakeLists.txt  OtaUpdateServiceImpl.cpp  OtaUpdateServiceImpl.hpp  main_rpi.cpp  vsomeip-ota.json
cppTask2/: firstTry.cpp  solution.cpp
cppTask3/: readme.md
cppTask5/sevenSegmentProject/: CMakeLists.txt
cppTask5/sevenSegmentProject/include/: IOStream.hpp  OStream.hpp  SevenSegment.hpp  gpio.hpp
cppTask5/sevenSegmentProject/src/: IOStream.cpp  OStream.cpp  SevenSegment.cpp  gpio.cpp
